--- a/style.css
+++ b/style.css
@@ -3,69 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* Heading */
-.site{
-    height: 900px;
-    background:#f9f9f9;
-    
-}
-.site-profile{
-    height: 1300px;
-    background:#ffff;
-}
-.site-blog{
-    height: 1300px;
-    background:#ffff;
-}
-.site-heading h4{
-color:#ff9800;
-font-weight: 600;
-margin-bottom: 10px;
-padding-top: 2rem;
-padding-left: 3rem;
-}
-.site-heading h2{
-    color: #1e2726;
-    font-weight: 700;
-    padding-left: 3rem;
-
-}
-.site-heading p{
-padding:9px 24rem 0 54px;
-line-height: 26px;
-}
-
 .btn.btn-light {
-    width: 27%;
-    height: 50px;
-    font-size: 20px;
-    font-weight: 800;
     background: #ffffff none repeat scroll 0 0;
     color: #1e2726;
     border: 2px solid #fff;
-    border-radius: 0px;
 }
 
 .btn.btn-theme {
-    width: 27%;
-    height: 50px;
-    font-size: 20px;
-    font-weight: 800;
     color: #fff;
     background-color: #ff9800;
     border: 2px solid #ff9800;
-    border-radius: 0px;
 
+}
+.btn{
+    width: 27%;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 800;  
+    border-radius: 0px;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 26px;
     overflow-x: hidden;
 }
-
 .carousel-item {
     height: 100vh;
     min-height: 350px;
@@ -84,9 +46,14 @@ body {
 .content {
     position: relative;
     top: -137px;
-    left: -139px;
+    left: -77px;
     height: 282px;
     background-color: rgba(3, 0, 0, 0.363);
+}
+@media(max-width:600px){
+    .content{
+    left: -139px;
+    }
 }
 .content span {
     color: #ff9800;
@@ -111,26 +78,35 @@ body {
     text-align: initial;
 }
 /* ABOUT */
-.video-about img{
+.about-video img{
     height: 480px;
-    margin-top: 5rem;
+    margin-top: 3rem;
     border-radius: 5px;
-
+    margin-left: 3.9rem;
     width: 63%;
     box-shadow: 0 10px 40px -15px rgba(0, 0, 0, 0.5);
 }
-.video-description{
-    /* background-color: brown; */
-    height: 550px;
-    margin-top: 5rem;
-    margin-left: -14rem;
+@media (min-width:600px){
+    .about-video img{
+        margin-top: 3rem;
+        margin-left: 3.9rem;
+    }
 }
-.video-description h2{
+.about-video-description{
+    height: 690px;
+    margin-top: 3rem;
+}
+@media(min-width:600px){
+    .about-video-description{
+        height: 430px;
+    }
+}
+.about-video-description h2{
     font-size: 40px;
     margin-bottom: 30px;
   
 }
-.video-description li i{
+.about-video-description li i{
     margin-right: 10px;
     color:#ff9800 ;
 }
@@ -146,28 +122,32 @@ body {
     text-align: left;
     z-index: 1;
 }
-
-/* .button-info.item::after{
-    background: #e7e7e7 none repeat scroll 0 0;
-    content: "";
-    height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 1px;
-} */
 /* about */
 .about-img img{
-margin-top:30px;  
-height: 850px;
-width: 120%;
+margin-top:30px; 
+height: 253px;
+width: 100%;
+}
+@media(min-width:768px){
+    .about-img img{
+        margin-top: 163px;
+        height: 939px;
+
+    }
 }
 .about-description{
-    margin-top:30px;  
-    height: 850px;
- 
+    margin-top:163px; 
+    height: 78rem;
+
     background-color: #333;
 }
+@media(min-width:768px){
+    .about-description{
+    height:939px;
+
+    }
+}
+
 .about-description h2{
     padding: 50px;
     color: #fff;
@@ -178,12 +158,21 @@ width: 120%;
     max-width: 95%;
     color: #cccccc;
 }
+.about-item h4{
+    font-size: 14px;
+    font-weight: 600;
+}
+@media(max-width:600px){
+    .about-item h4{
+    font-size: 20px;
+
+    }
+}
 .feature-list{
     margin-left: 3.5rem;
     width: 80%;
     height: 250px;
     margin-top: 3rem;
-    /* background-color: lawngreen; */
 }
 .item i{
     font-size: 60px;
@@ -205,12 +194,17 @@ width: 120%;
 /* Services */
 
 .services-work{
-    width: 20%;
-    margin: 3rem 56px 0 52px;
-    height: 244px;
+    margin:2rem;
+    height: 310px;
     background: #ffffff none repeat scroll 0 0;
     box-shadow: -1px 3px 10px 0 rgba(0, 0, 0, 0.06);
-    padding: 30px;
+    /* padding: 30px; */
+}
+@media(min-width:600px){
+    .services-work{
+        height:234px;
+
+    }
 }
 
 .service-item i{
@@ -220,6 +214,11 @@ width: 120%;
 .serivce-info{
     margin-top: -53px;
     padding-left: 70px
+}
+@media(min-width:600px){
+    .serivce-info{
+        padding-left: 63px
+    }
 }
 .serivce-info h3{
     font-size: 20px;
@@ -248,12 +247,12 @@ a.service-more {
     padding-left: 15px;
 }
 .portfolio-navbar {
-    margin-top: 35px; 
     background-color: #ffffff;
     margin-left: 95px;
 
 }
 .portfolio-navbar nav{
+    margin: 3rem 0px;
     border-radius: 50px;
     width: 50%;
     height: 98px;
@@ -266,20 +265,33 @@ a.service-more {
 }
 
 .profile-img{
-    height: 350px;
-    /* background-color: #ff9800; */
+    height: 320px;
     margin-bottom: 45px;
     margin-top: 25px;
-    max-width: 45px;
+    max-width: 205px;
+}
+@media(min-width:600px)
+{
+    .profile-img{
+        height: 350px;
+        max-width: 45px;
+    }
 }
 .profile-img img{
-    max-width: 399px;
-    margin-left: 6px;
+    max-width: 236px;
+    margin-left: 35px;
+}
+@media(max-width:600px)
+{
+    .profile-img img{
+        height: 290px;
+        margin-top: 101px;
+        max-width: 161px;
+        margin-bottom: -177px;
+
+}
 }
 /* Team */
-.team{
-    margin-left: 5rem;
-}
 .team-name{
     position: relative;
     height: 71px;
@@ -287,15 +299,16 @@ a.service-more {
     border-radius: 5px;  
 }
 .seperator{
-    height: 200px;
-    background-color: #ff9800;
-    
+    height: 113px;
+  background-color: #ff9900b0;    
 }
-.seperator-text{
-    margin-left: 6rem;
+@media(min-width:600px){
+    .seperator{
+        height: 160px;
+    }
 }
 .seperator-text h2{
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: bold;
 }
 /* Blog */
@@ -305,4 +318,62 @@ a.service-more {
     margin-top: 15px;
     margin-bottom: 15px;
     font-weight: 800;
+}
+/* Heading */
+.section-services{
+    height: 144rem;
+
+    background:#f9f9f9;
+    
+}
+@media(min-width:768px){
+    .section-services{
+    height: 830px;
+
+    }
+}
+.section-profile{
+    height: 1690px;
+    background:#ffff;
+    margin-top: 1rem;
+}
+@media(min-width:600px){
+    .section-profile{
+    height: 1300px;
+
+    }
+}
+.section-team{
+    height: 140rem;
+
+    background:#f9f9f9;
+}
+@media (min-width:600px){
+    .section-team{
+    height: 910px;
+
+    }
+}
+.section-blog{
+    height: 500px;
+    background:#ffff;
+    margin-bottom: 25px;
+}
+.section-heading h4{
+color:#ff9800;
+font-weight: 600;
+margin-bottom: 10px;
+padding-top: 2rem;
+padding-left: 3rem;
+}
+.section-heading h2{
+    color: #1e2726;
+    font-weight: 700;
+    padding-left: 3rem;
+
+}
+.section-heading p{
+    margin-bottom: 15px;
+line-height: 26px;
+margin-left: 2.5rem;
 }
