--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ width: 100%;
 
 .services-work{
     margin:2rem;
-    height: 440px;
+    height: 388px;
     background: #ffffff none repeat scroll 0 0;
     box-shadow: -1px 3px 10px 0 rgba(0, 0, 0, 0.06);
     /* padding: 30px; */
@@ -215,14 +215,12 @@ width: 100%;
     color: #ff9800;
 }
 .serivce-info{
-    margin-top: -53px;
-    padding-left: 70px;
-    margin-left: 56px;
-    padding-left: 8px;
+    margin-top: 7px;
+    margin-left: 0px;
 }
 @media(min-width:1024px){
     .serivce-info{
-        padding-left: 7px
+        padding: 25px;
     }
 }
 .serivce-info h3{
@@ -232,13 +230,19 @@ width: 100%;
 a.service-more {
     display: inline-block;
     font-weight: 600;
+    margin-top: -26px;
     text-transform: uppercase;
     color: #666666;
-
+}
+@media(min-width:1024px){
+    a.service-more {
+        margin-top: 26px;
+    }
 }
 .service-more i{
     display: inline-block;
     font-weight: 600;
+    margin-top: 28px;
     text-transform: uppercase;
     color: #666666;
     font-size: 20px;
@@ -247,13 +251,18 @@ a.service-more {
     color: #f1f1f1;
     font-family: "Poppins",sans-serif;
     font-size: 49px;
-    margin-top: -44px;
+    margin-top: 6px;
+    margin-left: 1px;
     font-weight: 900;
-    padding-left: 15px;
+}
+@media(min-width:1024px){
+    .count{
+        margin-left: -42px;
+    }
 }
 .portfolio-navbar {
     background-color: #ffffff;
-    margin-left: 95px;
+    /* margin-left: 95px; */
 
 }
 .portfolio-navbar nav{
@@ -273,7 +282,6 @@ a.service-more {
     height: 320px;
     margin-bottom: 45px;
     margin-top: 25px;
-    max-width: 205px;
 }
 @media(min-width:1024px)
 {
@@ -327,7 +335,7 @@ a.service-more {
 }
 /* Heading */
 .section-services{
-    height: 78rem;
+    height: 71rem;
 
     background:#f9f9f9;
     
@@ -339,7 +347,7 @@ a.service-more {
     }
 }
 .section-profile{
-    height: 1276px;
+    height: 74rem;
     background:#ffff;
     margin-top: 1rem;
 }
@@ -350,8 +358,7 @@ a.service-more {
     }
 }
 .section-team{
-    height: 58rem;
-
+    height: 60rem;
     background:#f9f9f9;
 }
 @media (min-width:1024px){
