--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ width: 100%;
 }
 @media(min-width:1024px){
     .about-item h4{
-    font-size: 24px;
+    font-size: 20px;
 
     }
 }
@@ -185,13 +185,11 @@ width: 100%;
     color: #fff;
     font-weight: 700;
     font-size: 17px;
-    margin-top: -50px;
+    /* margin-top: -50px; */
     padding-bottom: 9px;
     padding-left: 79px;
 }
-.feature-info p{
-    padding-left: 75px;
-}
+
 
 /* Services */
 
@@ -356,6 +354,9 @@ a.service-more {
     height: 1328px;
 
     }
+}
+.card-img img{
+    max-width: 25%;
 }
 .section-team{
     height: 60rem;
